--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                         <div class="div-prazo"><img class="img-prazo"
                                 src="https://cdn-icons-png.flaticon.com/512/3497/3497065.png">
-                            Produtos embalados com proteção extra e cuidados especiais.
+                            Produtos embalados com proteção extra e cuidados especiais.AAAAAA
                         </div>
 
 
