DEV-2 <trabalhando no bug da flexbox>

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                 <div>
                     <a href="cintos.html">
-                        <p class="p-titulo">Cintos</p>
+                        <p class="p-titulo">Cintossssss</p>
                     </a>
                 </div>
 
